PR bin/51114 - print the correct values for >&- and >& N (N > 9) in output from the "jobs" command (and other places that use the same routines.)